# birdhouse-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml
assets/: tailwind.css
assets/img/: guru.psd
assets/js/: map_init.js
assets/leaflet/: leaflet.js
assets/styling/: main.css  navbar.css  voguguru.css
assets/webfonts/: 2D81A6_0_0.eot
data/: phrases.json
encryption/: Cargo.toml
encryption/src/: lib.rs
public/: birdie_anflug.mov  birdie_anflug2.mov
src/: admin.rs  main.rs  newsletter.rs  postgres_store.rs  tcp_client.rs  tcp_state.rs
src/api/: gallery.rs  mod.rs
src/components/: mod.rs
src/views/: admin.rs  birds.rs  for_nerds.rs  gallery.rs  gallery_client.rs  home.rs  how_it_works.rs  makingof.rs  mod.rs  navbar.rs  newsletter.rs  unsubscribe.rs  voguguru.rs
