[package]
name = "birdhouse-rs"
version = "0.1.0"
authors = ["hacknus <linus.stoeckli@unibe.ch>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
dotenv = "0.15"
once_cell = "1.21.3"
chrono = "0.4.42"
encryption = { path = "encryption" }

# Server-only dependencies
ssh2 = { version = "0.9", optional = true }
axum = { version = "0.8.8", optional = true }
http = { version = "1.4.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
gloo-timers = "0.3.0"
serde_json = "1.0.148"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "HtmlCanvasElement",
    "WebGlUniformLocation",
    "WebSocket",
    "MessageEvent",
    "Performance",
    "ImageData",
    "Storage",
    "Window"
] }
wasm-bindgen = { version = "0.2.106", optional = true }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"], optional = true }
js-sys = "0.3"
base64 = "0.22.1"
bytes = "1.11.0"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.19", features = ["v4", "js", "serde"] }
dashmap = "6.1.0"
num-traits = "0.2"
url = "2.5.7"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "gif", "webp"], optional = true }
sha2 = { version = "0.10.9", optional = true }
webauthn-rs = { version = "0.5.3", optional = true }
zip = { version = "2.4.2", default-features = false, features = ["deflate"], optional = true }

# WASM-only dependencies (only compiled for web target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.83", features = ["Storage", "Window"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
gloo-net = { version = "0.6.0", features = ["http"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:ssh2",
    "dep:axum",
    "dep:http",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:wasm-bindgen",
    "dep:tokio-postgres",
    "dep:image",
    "dep:sha2",
    "dep:webauthn-rs",
    "dep:zip",
]
